// Vitest Snapshot v1, https://vitest.dev/guide/snapshot.html

exports[`FormFields.svelte > should render groups 1`] = `
<body>
  <div>
    <field-group
      class="flex flex-col gap-2"
    >
      <field-group
        class="flex-row"
      >
        <input-field
          class="flex flex-col "
        >
          <label
            for="name.first"
          >
            First Name
          </label>
           
          <field
            class="w-full flex flex-row items-center"
          >
             
            <input
              id="name.first"
              name="name.first"
              type="text"
            />
            
            
          </field>
           
        </input-field>
        
        
        <input-field
          class="flex flex-col "
        >
          <label
            for="name.last"
          >
            Last Name
          </label>
           
          <field
            class="w-full flex flex-row items-center"
          >
             
            <input
              id="name.last"
              name="name.last"
              type="text"
            />
            
            
          </field>
           
        </input-field>
        
        
      </field-group>
      
      <input-field
        class="flex flex-col "
      >
        <label
          for="age"
        >
          Age
        </label>
         
        <field
          class="w-full flex flex-row items-center"
        >
           
          <input
            id="age"
            max="100"
            min="0"
            name="age"
            type="number"
          />
          
          
        </field>
         
      </input-field>
      
      
    </field-group>
  </div>
</body>
`;

exports[`FormFields.svelte > should render items using custom component 1`] = `
<body>
  <div>
    <field-group
      class="flex flex-col gap-2"
    >
      <input-field
        class="flex flex-col "
      >
        <label
          for="name"
        >
          Name
        </label>
         
        <field
          class="w-full flex flex-row items-center"
        >
           
          <input
            id="name"
            name="name"
            type="text"
          />
          
          
        </field>
         
      </input-field>
      
      
      <p>
        Mr.
      </p>
      
      
    </field-group>
  </div>
</body>
`;

exports[`FormFields.svelte > should render set of inputs 1`] = `
<body>
  <div>
    <field-group
      class="flex flex-col gap-2"
    >
      <input-field
        class="flex flex-col "
      >
        <label
          for="name"
        >
          Name
        </label>
         
        <field
          class="w-full flex flex-row items-center"
        >
           
          <input
            id="name"
            name="name"
            type="text"
          />
          
          
        </field>
         
      </input-field>
      
      
      <input-field
        class="flex flex-col "
      >
        <label
          for="age"
        >
          Age
        </label>
         
        <field
          class="w-full flex flex-row items-center"
        >
           
          <input
            id="age"
            max="100"
            min="0"
            name="age"
            type="number"
          />
          
          
        </field>
         
      </input-field>
      
      
    </field-group>
  </div>
</body>
`;
